# SecondLine

./: .gitignore  DEMO.md  LICENSE  README.md  RUNBOOK.md
dashboard/: app.py
docs/: index.html
eval/: harness.py  improve.py  run_eval.py  scenarios.py
server/: .dockerignore  .env.example  Dockerfile  agent.py  agent_policy.json  backend.py  bot.py  pcc-deploy.toml  policy.py  pyproject.toml  sms.py
