[project]
name = "secondline"
version = "0.1.0"
description = "SecondLine — self-improving voice agent for missed calls at local businesses"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[anthropic,gradium,openai,runner,silero,webrtc,websocket]>=1.3.0",
    "pipecatcloud>=0.7.1",
    "openai>=1.40.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.uv]
# pipecat-ai 1.3.0 requires onnxruntime>=1.24.3, which has NO macOS x86_64 (Intel
# Mac) wheel. Override to the newest version that does (1.23.2) — runs Silero VAD
# fine and has Linux wheels, so the Pipecat Cloud (Linux) build is unaffected.
override-dependencies = ["onnxruntime==1.23.2"]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]
