[project]
name = "secondline"
version = "0.1.0"
description = "SecondLine — self-improving voice agent for missed calls at local businesses"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[anthropic,gradium,openai,runner,silero,webrtc,websocket]>=1.3.0",
    "pipecatcloud>=0.7.1",
    "openai>=1.40.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.uv]
# Intel-Mac (x86_64 macOS) lacks prebuilt wheels for the versions of onnxruntime
# (>=1.24.3) and numba/llvmlite (0.65.1/0.47.0) that pipecat-ai 1.3.0 pulls in.
# Force the newest versions that DO ship Intel-Mac wheels — gated to darwin/x86_64
# so the Linux cloud build and Apple-Silicon use pipecat's native deps untouched.
override-dependencies = [
    "onnxruntime==1.23.2; sys_platform=='darwin' and platform_machine=='x86_64'",
    "numba==0.62.1; sys_platform=='darwin' and platform_machine=='x86_64'",
    "llvmlite==0.45.1; sys_platform=='darwin' and platform_machine=='x86_64'",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]
